RESOLVED FIXED134175
[Cocoa] No way to grant storage quotas for WebSQL
https://bugs.webkit.org/show_bug.cgi?id=134175
Summary [Cocoa] No way to grant storage quotas for WebSQL
mitz
Reported 2014-06-22 12:00:28 PDT
[Cocoa] No way to grant storage quotas for WebSQL
Attachments
Add WKUIDelegatePrivate method for increasing quota (20.62 KB, patch)
2014-06-22 12:04 PDT, mitz
no flags
Add WKUIDelegatePrivate method for increasing quota (26.08 KB, patch)
2014-06-22 14:46 PDT, mitz
andersca: review+
mitz
Comment 1 2014-06-22 12:04:26 PDT
Created attachment 233572 [details] Add WKUIDelegatePrivate method for increasing quota
mitz
Comment 2 2014-06-22 12:30:17 PDT
Comment on attachment 233572 [details] Add WKUIDelegatePrivate method for increasing quota I think this can be done with a completion handler.
Anders Carlsson
Comment 3 2014-06-22 13:52:59 PDT
Comment on attachment 233572 [details] Add WKUIDelegatePrivate method for increasing quota View in context: https://bugs.webkit.org/attachment.cgi?id=233572&action=review > Source/WebKit2/UIProcess/API/Cocoa/_WKSecurityOrigin.h:36 > +@property (nonatomic, readonly) NSString *protocol; > +@property (nonatomic, readonly) NSString *host; These should be copy.
mitz
Comment 4 2014-06-22 14:46:52 PDT
Created attachment 233575 [details] Add WKUIDelegatePrivate method for increasing quota
WebKit Commit Bot
Comment 5 2014-06-22 14:48:27 PDT
Attachment 233575 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.cpp:4451: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIDelegate.h:65: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:176: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:190: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/API/APIUIClient.h:113: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/API/C/WKPage.cpp:1441: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 6 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 6 2014-06-23 10:27:01 PDT
Comment on attachment 233575 [details] Add WKUIDelegatePrivate method for increasing quota View in context: https://bugs.webkit.org/attachment.cgi?id=233575&action=review > Source/WebKit2/UIProcess/API/Cocoa/_WKSecurityOrigin.mm:48 > + _origin = origin; Since WebCore security origins are mutable, I think it's safer if we copy it here.
mitz
Comment 7 2014-06-23 11:26:05 PDT
Note You need to log in before you can comment on or make changes to this bug.