Source/WebKit2/UIProcess/API/Cocoa/_WKSecurityOriginInternal.h
@@ -23,30 +23,20 @@
  * THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#import <WebKit/WKUIDelegate.h>
+#import "_WKSecurityOrigin.h"
 
 #if WK_API_ENABLED
 
-#import <WebKit/_WKActivatedElementInfo.h>
-#import <WebKit/_WKSecurityOrigin.h>
+#import <wtf/PassRefPtr.h>
 
-@class _WKFrameHandle;
+namespace WebCore {
+class SecurityOrigin;
+}
 
-@protocol WKUIDelegatePrivate <WKUIDelegate>
+@interface _WKSecurityOrigin ()
 
-@optional
-
-// FIXME: This should be handled by the WKWebsiteDataStore delegate.
-- (void)_webView:(WKWebView *)webView decideDatabaseQuotaForSecurityOrigin:(_WKSecurityOrigin *)securityOrigin currentQuota:(unsigned long long)currentQuota currentOriginUsage:(unsigned long long)currentOriginUsage currentDatabaseUsage:(unsigned long long)currentUsage expectedUsage:(unsigned long long)expectedUsage decisionHandler:(void (^)(unsigned long long newQuota))decisionHandler;
-
-- (void)_webView:(WKWebView *)webView printFrame:(_WKFrameHandle *)frame;
-
-#if TARGET_OS_IPHONE
-- (NSArray *)_webView:(WKWebView *)webView actionsForElement:(_WKActivatedElementInfo *)element defaultActions:(NSArray *)defaultActions;
-- (void)_webView:(WKWebView *)webView didNotHandleTapAsClickAtPoint:(CGPoint)point;
-- (void)_webView:(WKWebView *)webView usesMinimalUI:(BOOL)wantMinimalUI;
-#endif
+- (instancetype)_initWithSecurityOrigin:(PassRefPtr<WebCore::SecurityOrigin>)origin;
 
 @end
 
-#endif // WK_API_ENABLED
+#endif
